# MobileRobot-Assignment

./: README.md
omni3ros_pkg/: CMakeLists.txt  package.xml
omni3ros_pkg/config/: joint_velocity.yaml
omni3ros_pkg/launch/: urdf_gazebo_view.launch  urdf_rviz_view.launch  velocity_controller.launch
omni3ros_pkg/mesh/: wc.stl
omni3ros_pkg/src/: 2021-10-19-20-39-21.bag  MY.bag  cmd_vel.py  head_angle.py  new_way.py  odom_pub.py  odom_pub.py.save  teleop_omni3.py  waypoint.py  waypoint1.py
omni3ros_pkg/urdf/: main.urdf.xacro
omni3ros_pkg/world/: my_world.world  worls
