<?xml version="1.0"?>
<package format="2">
  <name>omni3ros_pkg</name>
  <version>0.0.0</version>
  <description>MobileRobot Assignment by Jayachandran</description>


  <maintainer email="jaithegamer331@gmail.com">yug</maintainer>
  <license>GNU</license>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>gazebo</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
